# jarvis

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  agent.py  brain.py  config.py  intents.py  llm.py  main.py  media.py  memory_store.py  models.py  perception.py  self_improvement.py
app/static/: app.js  index.html  styles.css
app/tools/: __init__.py  filesystem.py  shell.py  web_search.py
tests/: test_agent_runtime.py  test_brain.py  test_filesystem_tool.py  test_intents.py  test_llm.py  test_main.py  test_memory_store.py  test_perception.py
